--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <p><a href="{{ site.baseurl }}{{ post.url }}" ></a> </p>
+      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
   {% endfor %}
 </div>
